# ViTools

./: .gitignore  LICENSE  README.md  ViStudio
ViEdit/: AGENTS.md  meson.build
ViEdit/data/: com.vitools.viedit.gschema.xml
ViEdit/src/: application.cpp  application.hpp  config.cpp  config.hpp  editor_tab.cpp  editor_tab.hpp  main.cpp  preferences_dialog.cpp  preferences_dialog.hpp  shortcuts_dialog.cpp  shortcuts_dialog.hpp  window.cpp  window.hpp
ViStudio/: AGENTS.md  index.html  package-lock.json  package.json  run.sh  start-dev.sh  tsconfig.json  vite.config.ts
ViStudio/electron/: main.ts  preload.ts
ViStudio/schemas/: vistproj.template.json
ViStudio/src/: App.tsx  main.tsx
ViStudio/src/components/: EditorPanel.css  EditorPanel.tsx  MenuBar.tsx  ProjectExplorer.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx  TabBar.tsx  TerminalPanel.tsx
ViStudio/src/styles/: global.css
ViStudio/src/types/: index.ts
ViTerm/: AGENTS.md  meson.build
ViTerm/data/: com.vitools.viterm.gschema.xml
ViTerm/src/: about_dialog.cpp  about_dialog.hpp  application.cpp  application.hpp  config.cpp  config.hpp  main.cpp  preferences_dialog.cpp  preferences_dialog.hpp  shortcuts_dialog.cpp  shortcuts_dialog.hpp  terminal_widget.cpp  terminal_widget.hpp  window.cpp  window.hpp
